objects/HA_Payment_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>RD</fullName>
                </value>
                <value>
                    <fullName>30N</fullName>
                </value>
                <value>
                    <fullName>10N</fullName>
                </value>
                <value>
                    <fullName>27N</fullName>
                </value>
                <value>
                    <fullName>10D</fullName>
                </value>
                <value>
                    <fullName>WK</fullName>
                </value>
                <value>
                    <fullName>RDA</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_1__c</fullName>
        <formula>Start_Date__c +  VALUE(Text(Schedule__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date -1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_2__c</fullName>
        <formula>Start_Date_2__c  +  VALUE(Text(Schedule__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date -2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_3__c</fullName>
        <formula>Start_Date_3__c  +  VALUE(Text(Schedule__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date -3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Night</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Bulk_Upload_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bulk Upload Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_External__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Available for website</inlineHelpText>
        <label>Is External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Methods__c</fullName>
        <label>Payment Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit/Debit Card</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque / Postal Order</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Card Terminal</fullName>
                </value>
                <value>
                    <fullName>Crowdfunding and Agencies</fullName>
                </value>
                <value>
                    <fullName>In Kind</fullName>
                </value>
                <value>
                    <fullName>Paypal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Time__c</fullName>
        <label>Processing Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_2__c</fullName>
        <label>Start Date -2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_3__c</fullName>
        <label>Start Date -3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date -1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Frequency__c</columns>
        <columns>Processing_Time__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>